# kadanoff-baym-simulator

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  experiment-registry.sqlite  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/data/: experiment-registry.sqlite
backend/scripts/: backfill_experiment_registry.py
backend/tests/: conftest.py  test_api.py  test_benchmark_profiling.py  test_exact_diagonalization_benchmark.py  test_experiment_registry.py  test_hamiltonian.py  test_kbe_hfb_solver.py  test_kbe_stationarity.py  test_kspace_analysis.py  test_kspace_native_path.py  test_kspace_spectral_analysis.py  test_noninteracting_solver.py  test_numerics.py  test_progress_storage.py  test_schema.py  test_self_energy_second_born.py  test_tdhfb_solver.py  test_tr_arpes_analysis.py  test_worker.py
docs/: backend-artifact-lifecycle.md  backend-audit-prompt.md  backend-code-review-2026-03-21-claude.md  backend-code-review-2026-03-21.md  backend-remediation-plan.md  equation-to-code-map.md  glossary.md  implementation-plan.md  literature-index.md  progress.md  research-workbench-plan.md  theory.md  validation-spec.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/dist-check/: index.html
frontend/dist-codex-check/: index.html
frontend/dist-codex-kspace-check/: index.html
frontend/dist-codex-progress-check/: index.html
(+204 files in other folders)
