[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdkb"
version = "0.1.0"
description = "Backend-first prototype for nonequilibrium superconductivity simulations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "numpy>=2.2,<3.0",
    "pydantic>=2.10,<3.0",
    "pytest>=8.3,<9.0",
    "scipy>=1.15,<2.0",
    "uvicorn>=0.34,<1.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
markers = [
    "physics_unit: schema, numerics, Hamiltonian, and local self-energy structure tests",
    "physics_invariant: conservation, symmetry, and limit-matching regression tests",
    "physics_benchmark: exact benchmark and convergence regression tests",
    "workflow: API and end-to-end workflow tests that do not count as physics validation",
]
